--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/index.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/index.html
@@ -27,7 +27,7 @@
             <ul>
                 {% for new in news %}
                 <li class = "news-text"><a href="{{ new.url }}">{{ new.news_text }}</a><span class="newsdate">{{ new.pub_time|time }}</span>
-                <div class = "snippet">{{ news.snippet }}</div></li>
+                <div class = "snippet">{{ new.snippet }}</div></li>
                 {% endfor %}
             </ul>
         </div>
