--- a/cntnt_agrgtr/get_cntnt/static/get_cntnt/style.css
+++ b/cntnt_agrgtr/get_cntnt/static/get_cntnt/style.css
@@ -56,6 +56,18 @@ a{
     margin: 0.5em 0;
     max-width:90%;
 }
+.snippet{
+    display: none;
+    position: absolute;
+    background-color: white;
+    z-index: 9999;
+    border: 1px solid black;
+    max-width: 50%;
+    padding: 1em;
+}
+.news-text:hover .snippet{
+    display: block;
+}
 .news-block{
     width:50%;
 }
