--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/login.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/login.html
@@ -8,3 +8,4 @@
     {% endfor %}
 </form>
 <p><a href="{% url 'get_cntnt:register' %}">sign up</a></p>
+<p><a href="{% url 'get_cntnt:reset_password' %}">Забыли пароль?</a></p>
