--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/index.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/index.html
@@ -20,8 +20,8 @@
                 {% endfor %}
             {% endif %}
             {% if user.is_authenticated %}
-                <li><a href="{%url 'get_cntnt:logout'%}">Выйти</a></li>
-                <li><a href="{%url 'get_cntnt:favourite'%}">Вы подписаны</a></li>
+                <li><a href="{% url 'get_cntnt:logout' %}">Выйти</a></li>
+                <li><a href="{% url 'get_cntnt:profile' %}">Вы подписаны</a></li>
             {% else %}
                 <li><a href="{% url 'get_cntnt:login' %}">Войти</a></li>
                 <li><a href="{% url 'get_cntnt:register' %}">Регистрация</a></li>
