--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/index.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/index.html
@@ -30,6 +30,7 @@
         })
     });
 </script>
+
 <header>
     <nav role="main-navigation" id = "main-nav">
         <div><img scr = {% static 'get_cntnt/logo.png' %}></div>
@@ -45,8 +46,8 @@
                 {% endfor %}
             {% endif %}
             {% if user.is_authenticated %}
+                <li><a href="{% url 'get_cntnt:profile' %}">{{ user }}</a></li>
                 <li><a href="{% url 'get_cntnt:logout' %}">Выйти</a></li>
-                <li><a href="{% url 'get_cntnt:profile' %}">Вы подписаны</a></li>
             {% else %}
                 <li><a href="{% url 'get_cntnt:login' %}">Войти</a></li>
                 <li><a href="{% url 'get_cntnt:register' %}">Регистрация</a></li>
@@ -59,11 +60,13 @@
     <div class = 'main'>
     {% for source, news in latest_news.items %}
         <div class="news-block">
-        <h2><a href="{{ source.url }}">{{ source.name }}</a></h2><span class = "add_to_lovelist_btn" data-id = "{{ source.id }}">Add to love list</span>
+        <h2><a href="{{ source.url }}">{{ source.name }}</a></h2>
+        {% if user.is_authenticated %}
+            <span class = "add_to_lovelist_btn" data-id = "{{ source.id }}">Add to love list</span>
+        {% endif %}
             <ul>
                 {% for new in news %}
-                <li class = "news-text"><a href="{{ new.url }}">{{ new.news_text }}</a><span class="newsdate">{{ new.pub_time|time }}</span>
-                <div class = "snippet">{{ new.snippet }}</div></li>
+                <li class = "news-text"><a href="{{ new.url }}" onmouseover="show()" onmouseleave="hide()" class="link-with-preview" data-text="{{ new.snippet }}">{{ new.news_text }}</a><span class="newsdate">{{ new.pub_time|time }}</span></li>
                 {% endfor %}
             </ul>
         </div>
@@ -72,5 +75,25 @@
 {% else %}
     <p>На данный момент нет новостей.</p>
 {% endif %}
+<div class="snippet"><p></p></div>
+<script>
+    const snippet = document.querySelector(".snippet");
 
+    const hide = () => {
+        return snippet.style.display = 'none';
+};
+
+    const show = event => {
+        const text = event.currentTarget.getAttribute("data-text");
+        snippet.querySelector('p').textContent = text;
+
+        event.currentTarget.appendChild(snippet);
+
+        return snippet.style.display = 'inline-block';
+    };
+    document.querySelectorAll(".link-with-preview").forEach(el => {
+        el.addEventListener("mouseover", show);
+        el.addEventListener("mouseleave", hide)
+    });
+</script>
 </body>
