--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/profile.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/profile.html
@@ -1,4 +1,27 @@
 <h2>Profile</h2>
-<p>User {{ user }}</p>
-<p>Email {{ user.email }}</p>
-<p>Password <a href="{% url 'get_cntnt:change_password' %}">change</a></p>
+<head>
+    <title>Cntnt_agrgtr</title>
+    {% load static %}
+    <link rel="stylesheet" href = "{% static 'font/font-faces.css' %}"></link>
+    <link rel="stylesheet" href = "{% static 'get_cntnt/style.css' %}"></link>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+<form method="POST">
+    {% csrf_token %}
+    <p class = "user-label">User <span class = "username">{{ user }}</span>{{ form.username }}</p>
+    <p class = "email-label">Email <span class = "email">{{ user.email }}</span>{{ form.email }}</p>
+    <p>Password <a href="{% url 'get_cntnt:change_password' %}">change</a></p>
+    <input type="submit">
+</form>
+<script>
+    jQuery(document).ready(function(){
+        jQuery('.username').click(function(){
+            jQuery('.username').hide();
+            jQuery('input[name="username"]').show();
+        })
+        jQuery('.email').click(function(){
+            jQuery('.email').hide();
+            jQuery('input[name="email"]').show();
+        })
+    });
+</script>
