--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/login.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/login.html
@@ -7,5 +7,5 @@
     {{ message }}
     {% endfor %}
 </form>
-<p><a href="{% url 'get_cntnt:register' %}">sign up</a></p>
-<p><a href="{% url 'get_cntnt:reset_password' %}">Забыли пароль?</a></p>
+<p><a href="{% url 'register' %}">sign up</a></p>
+<p><a href="{% url 'reset_password' %}">Забыли пароль?</a></p>
