--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/profile.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/profile.html
@@ -1,4 +1,4 @@
 <h2>Profile</h2>
 <p>User {{ user }}</p>
 <p>Email {{ user.email }}</p>
-<p>Password <a href="{% url 'get_cntnt:change_password' %}">change</a></p>
+<p>Password <a href="{% url 'password_change' %}">change</a></p>
