--- a/cntnt_agrgtr/get_cntnt/static/get_cntnt/style.css
+++ b/cntnt_agrgtr/get_cntnt/static/get_cntnt/style.css
@@ -84,3 +84,6 @@ input[name = "username"], input[name="email"]{
     cursor:pointer;
     text-decoration: underline;
 }
+.snippet{
+    display: none;
+}
