--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/home.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href = "{% static 'get_cntnt/style.css' %}"></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body>
+<body class="home-page">
 {% csrf_token %}
 <script>
     jQuery(document).ready(function(){
