--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/login.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/login.html
@@ -1,11 +1,27 @@
-<form method="POST" action="">
-    {% csrf_token %}
-    <p><input type="text" name="username"></p>
-    <p><input type="password" name="password"></p>
-    <input type="submit">
-    {% for message in messages %}
-    {{ message }}
-    {% endfor %}
-</form>
-<p><a href="{% url 'register' %}">sign up</a></p>
-<p><a href="{% url 'reset_password' %}">Забыли пароль?</a></p>
+<head>
+    <title>Авторизация</title>
+    {% load static %}
+    <link rel="stylesheet" href = "{% static 'font/font-faces.css' %}"></link>
+    <link rel="stylesheet" href = "{% static 'get_cntnt/style.css' %}"></link>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+<body class='sign-page'>
+    <div class='sign'>
+        <span class="sign-head">Войдите в свой аккаунт</span>
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div class="sign-form">
+                {% for message in messages %}
+                <div class="sign-field-error">{{ message }}</div>
+                {% endfor %}
+                <div class="sign-field"><input type="text" name="username" placeholder="Введите логин"></div>
+                <div class="sign-field"><input type="password" name="password" placeholder="Введите пароль"></div>
+                <button type="submit" class="sign-btn">Войти</button>
+            </div>
+        </form>
+        <hr>
+        <div class="redirect-sign-page">У вас нет акканута? <a href="{% url 'register' %}">Регистрация</a></div>
+        <div class="redirect-sign-page"><a href="{% url 'reset_password' %}">Забыли пароль?</a></div>
+    </div>
+</body>
+
