--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_change.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_change.html
@@ -1,12 +1,21 @@
-<form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-    <p>{{ field.label }}:<br>
-        {{ field }}
-    </p>
-    {% for error in field.errors %}
-    <p style="color : red">{{error}}</p>
-    {% endfor %}
-{% endfor %} 
-    <input name="Обновить пароль" type="submit">
-</form>
+<head>
+    <title>Сброс пароля</title>
+    {% load static %}
+    <link rel="stylesheet" href = "{% static 'font/font-faces.css' %}"></link>
+    <link rel="stylesheet" href = "{% static 'get_cntnt/style.css' %}"></link>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+<body class='sign-page'>
+    <div class='sign'>
+        <span class="sign-head">Введите новый пароль</span>
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div class="sign-form">
+                <div class="sign-field">{{ form.old_password }}<span class="sign-field-error">{{ form.old_password.errors }}</span></div>
+                <div class="sign-field">{{ form.new_password1 }}<span class="sign-field-error">{{ form.new_password1.errors }}</span></div>
+                <div class="sign-field">{{ form.new_password2 }}<span class="sign-field-error">{{ form.new_password2.errors }}</span></div>
+                <button type="submit" class="sign-btn">Сменить</button>
+            </div>
+        </form>
+    </div>
+</body>
