--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_change_done.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_change_done.html
@@ -1,8 +1,8 @@
 <head>
-    <title>Регистрация</title>
+    <title>Сброс пароля</title>
     {% load static %}
     <link rel="stylesheet" href = "{% static 'font/font-faces.css' %}"></link>
     <link rel="stylesheet" href = "{% static 'get_cntnt/style.css' %}"></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<h3 class="reset-passoword">Восстановление пароля отправленно вам на почту</h3>
+<h3 class="reset-passoword">Вы успешно сменили пароль</h3>
