--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_reset.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_reset.html
@@ -1,5 +1,21 @@
-<form method="post">
-    {% csrf_token %}
-    {{form}}
-    <input name="Обновить пароль" type="submit">
-</form>
+<head>
+    <title>Сброс пароля</title>
+    {% load static %}
+    <link rel="stylesheet" href = "{% static 'font/font-faces.css' %}"></link>
+    <link rel="stylesheet" href = "{% static 'get_cntnt/style.css' %}"></link>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+<body class='sign-page'>
+    <div class='sign'>
+        <span class="sign-head">Восстановление пароля</span>
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div class="sign-form">
+                <div class="sign-field">{{ form.email }}<span class="sign-field-error">{{ form.email.errors }}</span></div>
+                <button type="submit" class="sign-btn">Восстановить</button>
+            </div>
+        </form>
+        <hr>
+        <div class="redirect-sign-page"><a href="{% url 'login' %}">Я вспомнил пароль</a></div>
+    </div>
+</body>
