--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_reset_done.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_reset_done.html
@@ -1,1 +1,8 @@
-<h3>Password reset complete</h3>
+<head>
+    <title>Регистрация</title>
+    {% load static %}
+    <link rel="stylesheet" href = "{% static 'font/font-faces.css' %}"></link>
+    <link rel="stylesheet" href = "{% static 'get_cntnt/style.css' %}"></link>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+<h3 class="reset-passoword">Вы успешно восстановили пароль</h3>
