--- a/cntnt_agrgtr/get_cntnt/static/get_cntnt/style.css
+++ b/cntnt_agrgtr/get_cntnt/static/get_cntnt/style.css
@@ -1,5 +1,8 @@
 
-
+*{
+    padding: 0;
+    margin:0;
+}
 body{
     font-family: 'HelveticaNeueCyr';
     font-style:normal;
@@ -10,6 +13,7 @@ body{
 ul{
     list-style: none;
     padding:0;
+    margin:0;
 }
 a{
     text-decoration: none;
