--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/register.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/register.html
@@ -5,21 +5,20 @@
     <link rel="stylesheet" href = "{% static 'get_cntnt/style.css' %}"></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body class='sign-page'>
-    <div class="sign">
-        <span class="sign-head">Регистрация</span>
-        <form method="POST" action="">
-            <div class="sign-form">
+<body>
+    <div class="form-page">
+        <div class="container-form">
+            <span class="container-form-head">Регистрация</span>
+            <form method="POST" action="">
                 {% csrf_token %}
-                <div class="sign-field">{{ form.username }}<span class="sign-field-error">{{ form.username.errors }}</span></div>
-                <div class="sign-field">{{ form.email }}<span class="sign-field-error">{{ form.email.errors }}</span></div>
-                <div class="sign-field">{{ form.password1 }}<span class="sign-field-error">{{ form.password1.errors }}</span></div>
-                <div class="sign-field">{{ form.password2 }}<span class="sign-field-error">{{ form.password2.errors }}</span></div>
-                
-                <button type="submit" class="sign-btn">Зарегистрироваться</button>
-            </div>
-        </form>
-        <hr>
-        <div class="redirect-sign-page">Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a></div>
+                <div class="form-field">{{ form.username }}<span class="form-field-error">{{ form.username.errors }}</span></div>
+                <div class="form-field">{{ form.email }}<span class="form-field-error">{{ form.email.errors }}</span></div>
+                <div class="form-field">{{ form.password1 }}<span class="form-field-error">{{ form.password1.errors }}</span></div>
+                <div class="form-field">{{ form.password2 }}<span class="form-field-error">{{ form.password2.errors }}</span></div>
+                <button type="submit" class="form-btn">Зарегистрироваться</button>
+            </form>
+            <hr>
+            <div class="redirect-form-page">Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a></div>
+        </div>
     </div>
 </body>
