--- a/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_change.html
+++ b/cntnt_agrgtr/get_cntnt/templates/get_cntnt/password_change.html
@@ -5,17 +5,17 @@
     <link rel="stylesheet" href = "{% static 'get_cntnt/style.css' %}"></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body class='sign-page'>
-    <div class='sign'>
-        <span class="sign-head">Введите новый пароль</span>
-        <form method="POST" action="">
-            {% csrf_token %}
-            <div class="sign-form">
-                <div class="sign-field">{{ form.old_password }}<span class="sign-field-error">{{ form.old_password.errors }}</span></div>
-                <div class="sign-field">{{ form.new_password1 }}<span class="sign-field-error">{{ form.new_password1.errors }}</span></div>
-                <div class="sign-field">{{ form.new_password2 }}<span class="sign-field-error">{{ form.new_password2.errors }}</span></div>
-                <button type="submit" class="sign-btn">Сменить</button>
-            </div>
-        </form>
+<body>
+    <div class="form-page">
+        <div class='container-form'>
+            <span class="container-form-head">Введите новый пароль</span>
+            <form method="POST" action="">
+                {% csrf_token %}
+                <div class="form-field">{{ form.old_password }}<span class="form-field-error">{{ form.old_password.errors }}</span></div>
+                <div class="form-field">{{ form.new_password1 }}<span class="form-field-error">{{ form.new_password1.errors }}</span></div>
+                <div class="form-field">{{ form.new_password2 }}<span class="form-field-error">{{ form.new_password2.errors }}</span></div>
+                <button type="submit" class="form-btn">Сменить</button>
+            </form>
+        </div>
     </div>
 </body>
