--- a/cntnt_agrgtr/get_cntnt/static/get_cntnt/style.css
+++ b/cntnt_agrgtr/get_cntnt/static/get_cntnt/style.css
@@ -1,4 +1,3 @@
-
 *{
     padding: 0;
     margin:0;
@@ -18,7 +17,6 @@ ul{
 }
 a{
     text-decoration: none;
-    color:black;
 }
 #main-nav{
     width:100%;
@@ -76,6 +74,10 @@ a{
 }
 .news-block{
     width:50%;
+    min-height:14em;
+}
+.news-block a:hover{
+    color:#32ADA1;
 }
 a:hover{
     text-decoration: underline;
@@ -149,6 +151,7 @@ a:hover{
 }
 .form-btn, .search-btn{
     display: block;
+    cursor:pointer;
     width: 100%;
     margin-right: auto;
     margin-left: auto;
